types 2025 camera ready version

--- a/latex/types2025/references.bib
+++ b/latex/types2025/references.bib
@@ -2,12 +2,14 @@
   title = {Computability {{Beyond Church-Turing}} via {{Choice Sequences}}},
   booktitle = {Proceedings of the 33rd {{Annual ACM}}/{{IEEE Symposium}} on {{Logic}} in {{Computer Science}}},
   author = {Bickford, Mark and Cohen, Liron and Constable, Robert L. and Rahli, Vincent},
-  date = {2018-07-09},
+  year = {2018},
+  month = jul,
   series = {{{LICS}} '18},
   pages = {245--254},
   publisher = {Association for Computing Machinery},
-  location = {New York, NY, USA},
+  address = {New York, NY, USA},
   doi = {10.1145/3209108.3209200},
+  urldate = {2022-09-24},
   isbn = {978-1-4503-5583-4}
 }
 
@@ -15,13 +17,14 @@
   title = {Open {{Bar}} - a {{Brouwerian Intuitionistic Logic}} with a {{Pinch}} of {{Excluded Middle}}},
   booktitle = {29th {{EACSL Annual Conference}} on {{Computer Science Logic}} ({{CSL}} 2021)},
   author = {Bickford, Mark and Cohen, Liron and Constable, Robert L. and Rahli, Vincent},
-  date = {2021},
+  year = {2021},
   series = {Leibniz {{International Proceedings}} in {{Informatics}} ({{LIPIcs}})},
   volume = {183},
   pages = {11:1--11:23},
-  publisher = {Schloss Dagstuhl–Leibniz-Zentrum für Informatik},
-  location = {Dagstuhl, Germany},
+  publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
+  address = {Dagstuhl, Germany},
   doi = {10.4230/LIPIcs.CSL.2021.11},
+  urldate = {2022-09-24},
   isbn = {978-3-95977-175-7}
 }
 
@@ -29,30 +32,31 @@
   title = {Constructing {{Unprejudiced Extensional Type Theories}} with {{Choices}} via {{Modalities}}},
   booktitle = {7th {{International Conference}} on {{Formal Structures}} for {{Computation}} and {{Deduction}} ({{FSCD}} 2022)},
   author = {Cohen, Liron and Rahli, Vincent},
-  date = {2022},
+  year = {2022},
   series = {Leibniz {{International Proceedings}} in {{Informatics}} ({{LIPIcs}})},
   volume = {228},
   pages = {10:1--10:23},
-  publisher = {Schloss Dagstuhl – Leibniz-Zentrum für Informatik},
-  location = {Dagstuhl, Germany},
+  publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
+  address = {Dagstuhl, Germany},
   issn = {1868-8969},
   doi = {10.4230/LIPIcs.FSCD.2022.10},
+  urldate = {2023-04-17},
   isbn = {978-3-95977-233-4}
 }
 
 @inproceedings{cohenInductiveContinuityBrouwer2023,
   title = {Inductive {{Continuity}} via {{Brouwer Trees}}},
   booktitle = {48th {{International Symposium}} on {{Mathematical Foundations}} of {{Computer Science}} ({{MFCS}} 2023)},
-  author = {Cohen, Liron and da Rocha Paiva, Bruno and Rahli, Vincent and Tosun, Ayberk},
-  options = {useprefix=true},
-  date = {2023},
+  author = {Cohen, Liron and {da Rocha Paiva}, Bruno and Rahli, Vincent and Tosun, Ayberk},
+  year = {2023},
   series = {Leibniz {{International Proceedings}} in {{Informatics}} ({{LIPIcs}})},
   volume = {272},
   pages = {37:1--37:16},
-  publisher = {Schloss Dagstuhl – Leibniz-Zentrum für Informatik},
-  location = {Dagstuhl, Germany},
+  publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
+  address = {Dagstuhl, Germany},
   issn = {1868-8969},
   doi = {10.4230/LIPIcs.MFCS.2023.37},
+  urldate = {2023-09-12},
   isbn = {978-3-95977-292-1}
 }
 
@@ -60,12 +64,12 @@
   title = {Realizing Continuity Using Stateful Computations},
   booktitle = {31st {{EACSL}} Annual Conference on Computer Science Logic ({{CSL}} 2023)},
   author = {Cohen, Liron and Rahli, Vincent},
-  date = {2023},
+  year = {2023},
   series = {Leibniz International Proceedings in Informatics ({{LIPIcs}})},
   volume = {252},
   pages = {15:1--15:18},
-  publisher = {Schloss Dagstuhl – Leibniz-Zentrum für Informatik},
-  location = {Dagstuhl, Germany},
+  publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
+  address = {Dagstuhl, Germany},
   issn = {1868-8969},
   doi = {10.4230/LIPIcs.CSL.2023.15},
   isbn = {978-3-95977-264-8},
@@ -76,11 +80,13 @@
   title = {Separating {{Markov}}'s {{Principles}}},
   booktitle = {Proceedings of the 39th {{Annual ACM}}/{{IEEE Symposium}} on {{Logic}} in {{Computer Science}}},
   author = {Cohen, Liron and Forster, Yannick and Kirst, Dominik and Da Rocha Paiva, Bruno and Rahli, Vincent},
-  date = {2024-07-08},
+  year = {2024},
+  month = jul,
   pages = {1--14},
-  publisher = {ACM},
-  location = {Tallinn Estonia},
+  publisher = {Association for Computing Machinery},
+  address = {Tallinn Estonia},
   doi = {10.1145/3661814.3662104},
+  urldate = {2024-11-06},
   isbn = {9798400706608},
   langid = {english}
 }
@@ -89,107 +95,192 @@
   title = {A {{Computational Interpretation}} of {{Forcing}} in {{Type Theory}}},
   booktitle = {Epistemology versus {{Ontology}}},
   author = {Coquand, Thierry and Jaber, Guilhem},
-  date = {2012},
+  year = {2012},
   pages = {203--213},
   publisher = {Springer Netherlands},
-  location = {Dordrecht},
+  address = {Dordrecht},
   doi = {10.1007/978-94-007-4435-6_10},
+  urldate = {2022-10-10},
   isbn = {978-94-007-4434-9 978-94-007-4435-6},
   langid = {english}
 }
 
-@online{coquandIndependenceMarkovsPrinciple2017,
+@article{coquandIndependenceMarkovsPrinciple2016,
   title = {The {{Independence}} of {{Markov}}'s {{Principle}} in {{Type Theory}}},
   author = {Coquand, Thierry and Mannaa, Bassel},
-  date = {2017-08-14},
-  eprint = {1602.04530},
-  eprinttype = {arXiv},
-  eprintclass = {cs},
-  doi = {10.23638/LMCS-13(3:10)2017},
-  pubstate = {prepublished}
+  year = {2016},
+  journal = {LIPIcs, Volume 52, FSCD 2016},
+  volume = {52},
+  pages = {17:1-17:18},
+  publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
+  issn = {1868-8969},
+  doi = {10.4230/LIPICS.FSCD.2016.17},
+  urldate = {2025-05-07},
+  copyright = {Creative Commons Attribution 3.0 Unported license, info:eu-repo/semantics/openAccess},
+  isbn = {9783959770101},
+  langid = {english}
 }
 
 @article{faberEffectiveOperationsType2016,
   title = {Effective Operations of Type 2 in {{PCAs}}},
   author = {Faber, Eric and Van Oosten, Jaap},
-  date = {2016-05-17},
-  journaltitle = {Computability},
-  shortjournal = {COM},
+  year = {2016},
+  month = may,
+  journal = {Computability},
   volume = {5},
   number = {2},
   pages = {127--146},
   issn = {22113576, 22113568},
-  doi = {10.3233/COM-150048}
+  doi = {10.3233/COM-150048},
+  urldate = {2024-10-14}
 }
 
 @inproceedings{forsterMarkovsPrinciplesConstructive,
-  title = {Markov’s {{Principles}} in {{Constructive Type Theory}}},
-  author = {Forster, Yannick and Kirst, Dominik and da Rocha Paiva, Bruno and Rahli, Vincent},
-  options = {useprefix=true},
-  location = {Valencia, Spain}
+  title = {Markov's {{Principles}} in {{Constructive Type Theory}}},
+  booktitle = {29th {{International Conference}} on {{Types}} for {{Proofs}} and {{Programs}}},
+  author = {Forster, Yannick and Kirst, Dominik and {da Rocha Paiva}, Bruno and Rahli, Vincent},
+  address = {Valencia, Spain}
+}
+
+@book{johnstoneSketchesElephantTopos2002,
+  title = {Sketches of an {{Elephant A Topos Theory Compendium}}},
+  author = {Johnstone, Peter T},
+  year = {2002},
+  month = sep,
+  publisher = {Oxford University PressOxford},
+  doi = {10.1093/oso/9780198515982.001.0001},
+  urldate = {2024-11-19},
+  isbn = {978-0-19-851598-2 978-1-383-02287-2},
+  langid = {english}
 }
 
 @book{kleeneFoundationsIntuitionisticMathematics1965,
-  title = {The Foundations of Intuitionistic Mathematics: Especially in Relation to Recursive Functions / {{Stephen Cole Kleene}}, {{Richard Eugene Vesley}}.},
+  title = {The Foundations of Intuitionistic Mathematics: Especially in Relation to Recursive Functions},
   shorttitle = {The Foundations of Intuitionistic Mathematics},
-  author = {Kleene, Stephen Cole},
-  namea = {Vesley, Richard Eugene},
-  nameatype = {collaborator},
-  date = {1965},
+  author = {Kleene, Stephen Cole and Vesley, Richard Eugene},
+  year = {1965},
   series = {Studies in Logic and the Foundations of Mathematics},
   publisher = {North-Holland},
-  location = {Amsterdam},
+  address = {Amsterdam},
   langid = {english},
-  pagetotal = {viii+206}
+  lccn = {BC135}
 }
 
 @article{kreiselFormalSystemsBranches1970,
   title = {Formal Systems for Some Branches of Intuitionistic Analysis},
   author = {Kreisel, G. and Troelstra, A.S.},
-  date = {1970},
-  journaltitle = {Annals of Mathematical Logic},
-  shortjournal = {Annals of Mathematical Logic},
+  year = {1970},
+  journal = {Annals of Mathematical Logic},
   volume = {1},
   number = {3},
   pages = {229--387},
   issn = {00034843},
   doi = {10.1016/0003-4843(70)90001-X},
+  urldate = {2025-03-04},
+  copyright = {https://www.elsevier.com/tdm/userlicense/1.0/},
   langid = {english}
+}
+
+@book{maclaneSheavesGeometryLogic1992,
+  title = {Sheaves in Geometry and Logic: A First Introduction to Topos Theory},
+  shorttitle = {Sheaves in Geometry and Logic},
+  author = {Mac Lane, Saunders and Moerdijk, Ieke},
+  year = {1992},
+  series = {Universitext},
+  publisher = {Springer-Verlag},
+  address = {New York},
+  isbn = {978-0-387-97710-2 978-3-540-97710-0},
+  lccn = {QA169 .M335 1992}
+}
+
+@book{oostenRealizabilityIntroductionIts2008,
+  title = {Realizability: An Introduction to Its Categorical Side},
+  shorttitle = {Realizability},
+  author = {van Oosten, Jaap},
+  year = {2008},
+  series = {Studies in Logic and the Foundations of Mathematics},
+  edition = {1st ed},
+  number = {152},
+  publisher = {Elsevier},
+  address = {Oxford},
+  isbn = {978-0-444-51584-1},
+  lccn = {QA9.7 .O75 2008},
+  annotation = {OCLC: ocn180470932}
 }
 
 @article{rahliValidatingBrouwersContinuity2018,
   title = {Validating {{Brouwer}}'s Continuity Principle for Numbers Using Named Exceptions},
   author = {Rahli, Vincent and Bickford, Mark},
-  date = {2018-06},
-  journaltitle = {Mathematical Structures in Computer Science},
+  year = {2018},
+  month = jun,
+  journal = {Mathematical Structures in Computer Science},
   volume = {28},
   number = {6},
   pages = {942--990},
   issn = {0960-1295, 1469-8072},
   doi = {10.1017/S0960129517000172},
+  urldate = {2022-09-24},
+  langid = {english}
+}
+
+@inproceedings{sterlingGuardedComputationalType2018,
+  title = {Guarded {{Computational Type Theory}}},
+  booktitle = {Proceedings of the 33rd {{Annual ACM}}/{{IEEE Symposium}} on {{Logic}} in {{Computer Science}}},
+  author = {Sterling, Jonathan and Harper, Robert},
+  year = {2018},
+  month = jul,
+  pages = {879--888},
+  publisher = {ACM},
+  address = {Oxford United Kingdom},
+  doi = {10.1145/3209108.3209153},
+  urldate = {2023-02-13},
+  isbn = {978-1-4503-5583-4},
   langid = {english}
 }
 
 @article{sterlingHigherOrderFunctions2021,
-  title = {Higher Order Functions and {{Brouwer}}’s Thesis},
+  title = {Higher Order Functions and {{Brouwer}}'s Thesis},
   author = {Sterling, Jonathan},
-  date = {2021},
-  journaltitle = {Journal of Functional Programming},
-  shortjournal = {J. Funct. Prog.},
+  year = {2021},
+  journal = {Journal of Functional Programming},
   volume = {31},
   pages = {30},
   issn = {0956-7968, 1469-7653},
   doi = {10.1017/S0956796821000095},
+  urldate = {2023-01-09},
+  langid = {english}
+}
+
+@book{vanattenBrouwer2004,
+  title = {On {{Brouwer}}},
+  author = {{van Atten}, Mark},
+  year = {2004},
+  publisher = {Wadsworth Publishing Company}
+}
+
+@article{vandenbergAspectsPredicativeAlgebraic2011,
+  title = {Aspects of Predicative Algebraic Set Theory, {{II}}: {{Realizability}}},
+  shorttitle = {Aspects of Predicative Algebraic Set Theory, {{II}}},
+  author = {Van Den Berg, Benno and Moerdijk, Ieke},
+  year = {2011},
+  month = apr,
+  journal = {Theoretical Computer Science},
+  volume = {412},
+  number = {20},
+  pages = {1916--1940},
+  issn = {03043975},
+  doi = {10.1016/j.tcs.2010.12.019},
+  urldate = {2025-05-08},
+  copyright = {https://www.elsevier.com/tdm/userlicense/1.0/},
   langid = {english}
 }
 
 @article{vanoostenSemanticalProofJonghs1991,
   title = {A Semantical Proof of {{De Jongh}}'s Theorem},
-  author = {van Oosten, Jaap},
-  options = {useprefix=true},
-  date = {1991-03-01},
-  journaltitle = {Archive for Mathematical Logic},
-  shortjournal = {Archive for Mathematical Logic},
+  author = {{van Oosten}, Jaap},
+  year = {1991},
+  month = mar,
+  journal = {Archive for Mathematical Logic},
   volume = {31},
   number = {2},
   pages = {105--114},
