remove dangling maths

--- a/latex/types2025/types2025.tex
+++ b/latex/types2025/types2025.tex
@@ -251,7 +251,7 @@ which evidence that \(x\) satisfies \(\varphi\), i.e.\ its \textit{realizers}.
 %
 We say that \(\varphi\) implies \(\psi\), written~\(\varphi\leq\psi\), if there
 exists a program \(e\) which for every \(x\), will take evidence that \(x\)
-satisfies \(\varphi\) and convert it to evidence that \(x\) satisfies \(\psi\).
+satisfies~\(\varphi\) and convert it to evidence that \(x\) satisfies \(\psi\).
 %
 We include the modality \(\IBoxSym\) to accommodate for choice sequences.
 %
@@ -333,8 +333,8 @@ no choice sequence realizers, as their behaviour will be the same at every
 world.
 %
 If we take its sheafification, a realizer at a world \(w\) won't be a single
-element \(e : \mathcal{K}_{1}\) anymore, but will instead be a compatible family
-of realizers \({(e_{u})}_{u\in\mathcal{U}}\) indexed by a cover of \(w\).
+element~\(e : \mathcal{K}_{1}\) anymore, but will instead be a compatible family
+of realizers \({(e_{u})}_{u\in\mathcal{U}}\) indexed by a cover of~\(w\).
 %
 Aside from being compatible~\cite[Definition 2.1.2 in \S
 C2.1]{johnstoneSketchesElephantTopos2002}, we have no restrictions on this
